After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793196 - GtkSourceView doesn't respect accepts-tab property from GtkTextView.
GtkSourceView doesn't respect accepts-tab property from GtkTextView.
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2018-02-05 19:26 UTC by Tomasz Miąsko
Modified: 2018-02-07 11:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Respect accepts-tab property from GtkTextView. (918 bytes, patch)
2018-02-05 19:26 UTC, Tomasz Miąsko
none Details | Review

Description Tomasz Miąsko 2018-02-05 19:26:21 UTC
Created attachment 367928 [details] [review]
Respect accepts-tab property from GtkTextView.

When accepts-tab is true, instead of inserting text into buffer, the focus
should be moved to next widget, similarly as it is currently done for Ctrl-Tab.
Comment 1 Sébastien Wilmet 2018-02-07 11:06:54 UTC
Thanks for the patch, I've pushed a slightly modified version to the master branch:
commit 5f46b2f6050cd9a79643d269243256e72a95f192
(there must be a space before each opening parenthesis).

And cherry-picked on the gnome-3-24 branch.

I've tested with the GTK+ inspector, to change the value of the GtkTextView:accepts-tab property, and the patch works fine, there was indeed a bug.