View: respect GtkTextView:accepts-tab property

https://bugzilla.gnome.org/show_bug.cgi?id=793196